@@ -77,6 +77,47 @@
 	
   </dependencies>
   
+  <build>
+		<testSourceDirectory>src/test/java</testSourceDirectory>
+		<resources>
+			<resource>
+				<directory>src/test/java</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
+
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<!-- 经过测试 maven-compiler-plugin 插件版本请使用3.3，否则在jenkins上无法执行测试 -->
+				<version>3.3</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.18.1</version>
+				<configuration>
+					<!-- 解决用maven执行test时 日志乱码的问题，详见：http://www.cnblogs.com/discuss/archive/2010/10/27/1862225.html -->
+					<argLine>-Dfile.encoding=UTF-8</argLine>
+					<!-- 解决maven oom问题http://blog.csdn.net/e5945/article/details/7740904 -->
+					<argLine>-Xms512m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=128m</argLine>
+					<forkCount>0</forkCount>
+					<suiteXmlFiles>
+						<suiteXmlFile>runAll.xml</suiteXmlFile>
+					</suiteXmlFiles>
+					<!--定义maven运行测试生成的报表路径 -->
+					<reportsDirectory>./result/test-report</reportsDirectory>
+				</configuration>
+			</plugin>
+
+		</plugins>
+	</build>
+  
   <repositories>
   	<repository>
   		<id>saucelabs-repository</id>
